Added OpsGenie secret to validation script

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,6 +39,8 @@ jobs:
           note: Closing test alert
 
       - name: Verify alert exists and closed
+        env:
+          OPSGENIE_API_KEY: ${{ secrets.OPSGENIE_API_KEY }}
         run: |
           sleep 2
           node assert_closed_alert_exists.js $ALERT_ALIAS
