--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,15 @@ name: Test OpsGenie Actions
 
 on:
   workflow_dispatch:
-
+    inputs:
+      create-alert-branch:
+        description: 'Branch fot create-opsgenie-alert-action'
+        required: false
+        default: 'main'
+      close-alert-branch:
+        description: 'Branch fot close-opsgenie-alert-action'
+        required: false
+        default: 'main'
 
 jobs:
   test:
@@ -19,7 +27,7 @@ jobs:
           echo "ALERT_ALIAS=$(echo -n $ALIAS)" >> $GITHUB_ENV
 
       - name: Create OpsGenie Alert
-        uses: rockem/create-opsgenie-alert-action@v1
+        uses: ${{ format('rockem/create-opsgenie-alert-action@{0}', inputs.create-alert-branch) }}
         with:
           api_key: ${{ secrets.OPSGENIE_API_KEY }}
           alias: ${{ env.ALERT_ALIAS }}
@@ -28,20 +36,21 @@ jobs:
           priority: P5
           tags: e2e, test, actions
 
-      - name: Wait for a bit
+      - name: Give alert time to be created
         run: sleep 2
 
       - name: Close OpsGenie Alert
-        uses: rockem/close-opsgenie-alert-action@v1
+        uses: ${{ format('rockem/close-opsgenie-alert-action@{0}', inputs.close-alert-branch) }}
         with:
           api_key: ${{ secrets.OPSGENIE_API_KEY }}
           alias: ${{ env.ALERT_ALIAS }}
           user: kuku@gmail.com
           note: Closing test alert
 
+      - name: Give alert time to close
+        run: sleep 2
+
       - name: Verify alert exists and closed
         env:
           OPSGENIE_API_KEY: ${{ secrets.OPSGENIE_API_KEY }}
-        run: |
-          sleep 2
-          node .github/workflows/assert_closed_alert_exists.js $ALERT_ALIAS
+        run: node .github/workflows/assert_closed_alert_exists.js $ALERT_ALIAS
