Renamed alerts deletion step

--- a/.github/workflows/purge-alerts.yml
+++ b/.github/workflows/purge-alerts.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: '16'
 
-      - name: Verify alert is closed
+      - name: Delete old alerts
         env:
           OPSGENIE_API_KEY: ${{ secrets.OPSGENIE_API_KEY }}
         run: node ./src/purge-alerts.js
