--- a/.github/workflows/purge-alerts.yml
+++ b/.github/workflows/purge-alerts.yml
@@ -15,6 +15,8 @@ jobs:
         with:
           node-version: '16'
 
+      - run: yarn
+
       - name: Delete old alerts
         env:
           OPSGENIE_API_KEY: ${{ secrets.OPSGENIE_API_KEY }}
