--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "eslint": "^8.9.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4"
+  },
+  "dependencies": {
+    "axios": "^0.26.0",
+    "axios-request-throttle": "^1.0.0"
   }
 }
