--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,9 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
+
+      - run: yarn
+
       - name: Set alert alias
         run: |
           export ALIAS=test-alert-$(date +%s)
