--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "node": ">=16"
   },
   "devDependencies": {
-    "eslint": "^8.9.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.4"
+    "eslint": "8.9.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-plugin-import": "2.25.4"
   },
   "dependencies": {
-    "axios": "^0.26.0",
-    "axios-request-throttle": "^1.0.0"
+    "axios": "1.6.0",
+    "axios-request-throttle": "1.0.0"
   }
 }
