--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,8 +2,6 @@ name: Test OpsGenie Actions
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 */12 * * *'
 
 jobs:
   test:
@@ -13,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: '18'
 
       - run: yarn
 
@@ -23,7 +21,7 @@ jobs:
           echo "ALERT_ALIAS=$(echo -n $ALIAS)" >> $GITHUB_ENV
 
       - name: Create OpsGenie Alert
-        uses: rockem/create-opsgenie-alert-action@v1
+        uses: rockem/create-opsgenie-alert-action
         with:
           api_key: ${{ secrets.OPSGENIE_API_KEY }}
           alias: ${{ env.ALERT_ALIAS }}
@@ -35,7 +33,7 @@ jobs:
         run: sleep 2
 
       - name: Close OpsGenie Alert
-        uses: rockem/close-opsgenie-alert-action@v1
+        uses: rockem/close-opsgenie-alert-action
         with:
           api_key: ${{ secrets.OPSGENIE_API_KEY }}
           alias: ${{ env.ALERT_ALIAS }}
